--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,9 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, ActionBarActivity"
-            />
+            android:layout_height="fill_parent"/>
 </LinearLayout>
 
